[tool.poetry]
name = "encryption-message"
version = "0.0.1"
description = "An application for communication using message encryption"
authors = ["h0diush"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.35"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
